--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,6 +25,7 @@ build:
 production:
   type: deploy
   environment: production
+  allow_failure: true
   stage: production
   image: ruby:latest
   script:
@@ -33,7 +34,7 @@ production:
     - gem install dpl
     - cd dist
     - dpl --provider=heroku --app=$HEROKU_APP_NAME --api-key=$HEROKU_PRODUCTION_API_KEY --skip_cleanup
-  when: manual
+  when: on_success
   tags:
     - deploy
   only:
