--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "crypto-js": "^4.0.0",
+    "jquery": "^3.5.0",
     "js-cookie": "^2.2.1",
     "node-sass": "^4.13.1",
+    "popper": "^1.0.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
