--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/googlemaps": "^3.39.3",
+    "@types/markerclustererplus": "^2.1.33",
+    "@types/react": "^16.9.34",
+    "ajv": "^6.12.0",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "crypto-js": "^4.0.0",
@@ -13,6 +17,7 @@
     "js-cookie": "^2.2.1",
     "node-sass": "^4.13.1",
     "popper": "^1.0.1",
+    "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
@@ -20,6 +25,7 @@
     "react-notifications-component": "^2.4.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "typescript": "^3.8.3",
     "webpack": "^4.42.1"
   },
   "scripts": {
