--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 services:
   frontend:
     tty: true
-    command: bash -c "npm install && npm start_dev"
+    command: bash -c "npm install && npm dev"
     container_name: basic-health-units-plataform
     build: ./
     ports:
