--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ajv": "^6.12.0",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "core-js": "^3.6.5",
     "crypto-js": "^4.0.0",
     "jquery": "^3.5.0",
     "js-cookie": "^2.2.1",
@@ -25,13 +26,11 @@
     "react-notifications-component": "^2.4.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "typescript": "^3.8.3",
-    "webpack": "^4.42.1"
+    "typescript": "^3.8.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "start_dev": "PORT=8000 react-scripts start",
-    "build": "webpack --config webpack.config.js",
+    "dev": "webpack-dev-server --config webpack.development.js",
+    "build": "npm run webpack --config webpack.production.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -53,7 +52,22 @@
   "description": "Fron-end platform written in ReactJs to consume data from [Basic Health Units API](https://gitlab.com/victor.h.souza.vieira/basic-health-units).",
   "main": "index.js",
   "devDependencies": {
-    "webpack-cli": "^3.3.11"
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/polyfill": "^7.8.7",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-react": "^7.9.4",
+    "babel-loader": "^8.1.0",
+    "css-loader": "^3.5.2",
+    "html-webpack-plugin": "^4.2.0",
+    "sass": "^1.26.3",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.1.4",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3",
+    "webpack-merge": "^4.2.2"
   },
   "repository": {
     "type": "git",
