--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
     "typescript": "^3.8.3"
   },
   "scripts": {
+    "webpack": "webpack",
     "dev": "webpack-dev-server --config webpack.development.js",
-    "build": "npm run webpack --config webpack.production.js",
+    "build": "npm run webpack -- --config webpack.production.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
