--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
   "scripts": {
     "webpack": "webpack",
     "dev": "webpack-dev-server --config webpack.development.js",
-    "build": "npm run webpack -- --config webpack.production.js",
+    "postinstall": "npm run webpack -- --config webpack.production.js",
+    "start": "node server.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
