adds plugin for the app to read environment variables using the webpack

--- a/.env
+++ b/.env
@@ -1,1 +1,10 @@
 SKIP_PREFLIGHT_CHECK=true
+
+APP_GOOGLE_MAP_URL=https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=geometry,drawing,places&key=
+
+APP_GOOGLE_API_KEY=AIzaSyCZXliOE3XjpGoGmFP9mujhlcX7vtRD118
+#APP_GOOGLE_API_KEY=''
+
+APP_PRIVATE_KEY=Cm8FdjqFjM%MVNgcaUxjHJDxj0JUSBx^wFSZHnCVkkXC#sS8qsky53&jwatm*F%0n!l4FznpUlJ4d3RN#Tl9@F5*nBIz0SB7f@I
+
+APP_API_HOST=https://basic-health-units-api.herokuapp.com
