--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,6 +7,7 @@ production:
   environment: production
   stage: production
   image: ruby:latest
+  when: manual
   script:
     - apt-get update -qy
     - apt-get install -y ruby-dev
@@ -14,3 +15,4 @@ production:
     - dpl --provider=heroku --app=$HEROKU_APP_NAME --api-key=$HEROKU_PRODUCTION_API_KEY --skip_cleanup
   only:
     - tags
+    - branches
