--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/polyfill": "^7.8.7",
+    "@babel/preset-env": "^7.9.5",
+    "@babel/preset-react": "^7.9.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -11,9 +17,12 @@
     "@types/react": "^16.9.34",
     "ajv": "^6.12.0",
     "axios": "^0.19.2",
+    "babel-loader": "^8.1.0",
     "bootstrap": "^4.4.1",
     "core-js": "^3.6.5",
     "crypto-js": "^4.0.0",
+    "css-loader": "^3.5.2",
+    "html-webpack-plugin": "^4.2.0",
     "jquery": "^3.5.0",
     "js-cookie": "^2.2.1",
     "node-sass": "^4.13.1",
@@ -26,19 +35,10 @@
     "react-notifications-component": "^2.4.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "typescript": "^3.8.3",
-    "@babel/core": "^7.9.0",
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/polyfill": "^7.8.7",
-    "@babel/preset-env": "^7.9.5",
-    "@babel/preset-react": "^7.9.4",
-    "babel-loader": "^8.1.0",
-    "css-loader": "^3.5.2",
-    "html-webpack-plugin": "^4.2.0",
     "sass": "^1.26.3",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.1.4",
+    "typescript": "^3.8.3",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3",
@@ -47,7 +47,7 @@
   "scripts": {
     "webpack": "webpack",
     "dev": "webpack-dev-server --config webpack.development.js",
-    "postinstall": "npm run webpack -- --config webpack.production.js",
+    "build": "npm run webpack -- --config webpack.production.js",
     "start": "node server.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -78,5 +78,8 @@
   "bugs": {
     "url": "https://gitlab.com/victor.h.souza.vieira/basic-health-units-plataform/issues"
   },
-  "homepage": "https://gitlab.com/victor.h.souza.vieira/basic-health-units-plataform#README"
+  "homepage": "https://gitlab.com/victor.h.souza.vieira/basic-health-units-plataform#README",
+  "devDependencies": {
+    "dotenv-webpack": "^1.8.0"
+  }
 }
