--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "core-js": "^3.6.5",
     "crypto-js": "^4.0.0",
     "css-loader": "^3.5.2",
+    "express": "^4.17.1",
     "html-webpack-plugin": "^4.2.0",
     "jquery": "^3.5.0",
     "js-cookie": "^2.2.1",
